examples/readme_validation/syntax_cases/fail/fail_bad_keyword_call.dsl
@name: "语法负例-关键字参数错误"
[打印] 内容: "missing comma"
